--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero__title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
           <button class="hero__button" type="button">Замовити послугу</button>
@@ -101,7 +101,7 @@
           </ul>
         </div>
       </section>
-      <section class="our-team">
+      <section class="our-team section">
         <div class="container">
           <h2 class="our-team__title">Наша команда</h2>
           <ul class="our-team__list">
