--- a/portfolio.html
+++ b/portfolio.html
@@ -10,31 +10,40 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
-      <nav class="header__nav">
-        <a class="header__logo link" href="/" aria-label="en"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <ul class="header__nav list">
-          <li><a class="header__nav-list-item link" href="./index.html">Студія</a></li>
-          <li><a class="header__nav-list-current link" href="./portfolio.html">Портфоліо</a></li>
-          <li><a class="header__nav-list-item link" href="">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li>
-          <a class="header__contacts-item link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+    <header class="header">
+      <div class="container">
+        <nav class="header__nav">
+          <a class="header__logo link" href="/" aria-label="en"
+            ><span class="logo-web">Web</span>Studio</a
           >
-        </li>
-        <li>
-          <a class="header__contacts-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+          <ul class="header__nav-list">
+            <li><a class="header__nav-list-current link" href="./index.html">Студія</a></li>
+            <li><a class="header__nav-list-item link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="header__nav-list-item link" href="">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts">
+          <li>
+            <a class="header__contacts-item link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="header__contacts-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <section class="works">
@@ -134,22 +143,24 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer__logo link" href="/" lang="en"
-        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
-      >
-      <address>
-        <ul class="footer__contacts list">
-          <li class="footer__contacts-adress"><p>м. Київ, пр-т Лесі Українки, 26</p></li>
-          <li>
-            <a class="footer__contacts-item link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer__contacts-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="footer__logo link" href="/" lang="en"
+          ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+        >
+        <address>
+          <ul class="footer__contacts">
+            <li class="footer__contacts-adress"><p>м. Київ, пр-т Лесі Українки, 26</p></li>
+            <li>
+              <a class="footer__contacts-item link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer__contacts-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
