Added styles to index.html

--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@
           <button class="hero__button" type="button">Замовити послугу</button>
         </div>
       </section>
-      <section class="about-us">
+      <section class="about-us section">
         <div class="container">
           <h2 class="about-us__advantages visually-hidden">Переваги</h2>
           <ul class="about-us__advantages-list">
-            <li class="about-us__advantages-list-item">
+            <li class="about-us__advantages-item">
               <h3 class="about-us__advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="about-us__advantages-paragraph">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="about-us__advantages-list-item">
+            <li class="about-us__advantages-item">
               <h3 class="about-us__advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="about-us__advantages-paragraph">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="about-us__advantages-list-item">
+            <li class="about-us__advantages-item">
               <h3 class="about-us__advantages-title">ПЛАНУВАННЯ</h3>
               <p class="about-us__advantages-paragraph">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="about-us__advantages-list-item">
+            <li class="about-us__advantages-item">
               <h3 class="about-us__advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="about-us__advantages-paragraph">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
