--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
             ><span class="logo-web">Web</span>Studio</a
           >
           <ul class="header__nav-list">
-            <li><a class="header__nav-list-current link" href="./index.html">Студія</a></li>
-            <li><a class="header__nav-list-item link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="header__nav-list-item link" href="./index.html">Студія</a></li>
+            <li><a class="header__nav-list-current link" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="header__nav-list-item link" href="">Контакти</a></li>
           </ul>
         </nav>
@@ -46,21 +46,23 @@
       </div>
     </header>
     <main>
-      <section class="works">
-        <h1 class="works__title" hidden>Портфоліо</h1>
-        <ul class="works__filter list">
+      <section class="works section">
+        <h1 class="works__title visually-hidden">Портфоліо</h1>
+        <ul class="works__filter">
           <li><button class="works__filter-button" type="button">Усі</button></li>
           <li><button class="works__filter-button" type="button">Веб-сайти</button></li>
           <li><button class="works__filter-button" type="button">Додатки</button></li>
           <li><button class="works__filter-button" type="button">Дизайн</button></li>
           <li><button class="works__filter-button" type="button">Маркетинг</button></li>
         </ul>
-        <ul class="works list">
+        <ul class="works__list">
           <li class="works__list-item">
             <a class="works__example link" href="">
               <img class="works__img" src="./images/techno.jpg" alt="Ноутбук" width="370" />
-              <h2 class="works__title">Технокряк</h2>
-              <p class="works__paragraph">Веб-сайт</p>
+              <div class="works__description">
+                <h2 class="works__title">Технокряк</h2>
+                <p class="works__paragraph">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
@@ -71,8 +73,12 @@
                 alt="Постер з двома футболістами"
                 width="370"
               />
-              <h2 class="works__title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="works__paragraph">Дизайн</p>
+              <div class="works__description">
+                <h2 class="works__title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="works__paragraph">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
@@ -83,48 +89,55 @@
                 alt="Логотип ресторана морської їжі"
                 width="370"
               />
-              <h2 class="works__title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="works__paragraph">Додаток</p>
+              <div class="works__description">
+                <h2 class="works__title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="works__paragraph">Додаток</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
             <a class="works__example link" href="">
-              <img
-                class="works__img"
-                src="./images/product-designer.jpg"
-                alt="Гарнітура"
-                width="370"
-              />
-              <h2 class="works__title">Проєкт <span lang="en">Prime</span></h2>
-              <p class="works__paragraph">Маркетинг</p>
+              <img class="works__img" src="./images/prime.jpg" alt="Гарнітура" width="370" />
+              <div class="works__description">
+                <h2 class="works__title">Проєкт <span lang="en">Prime</span></h2>
+                <p class="works__paragraph">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
             <a class="works__example link" href="">
               <img class="works__img" src="./images/boxes.jpg" alt="Дві коробочки" width="370" />
-              <h2 class="works__title">Проєкт <span lang="en">Boxes</span></h2>
-              <p class="works__paragraph">Додаток</p>
+              <div class="works__description">
+                <h2 class="works__title">Проєкт <span lang="en">Boxes</span></h2>
+                <p class="works__paragraph">Додаток</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
             <a class="works__example link" href="">
               <img class="works__img" src="./images/monoblock.jpg" alt="Моноблок" width="370" />
-              <h2 class="works__title" lang="en">Inspiration has no Borders</h2>
-              <p class="works__paragraph">Веб-сайт</p>
+              <div class="works__description">
+                <h2 class="works__title" lang="en">Inspiration has no Borders</h2>
+                <p class="works__paragraph">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
             <a class="works__example link" href="">
               <img class="works__img" src="./images/book.jpg" alt="Відкрита книга" width="370" />
-              <h2 class="works__title">Видання <span lang="en">Limited Edition</span></h2>
-              <p class="works__paragraph">Дизайн</p>
+              <div class="works__description">
+                <h2 class="works__title">Видання <span lang="en">Limited Edition</span></h2>
+                <p class="works__paragraph">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
             <a class="works__example link" href="">
               <img class="works__img" src="./images/label.jpg" alt="Бирка" width="370" />
-              <h2 class="works__title">Проєкт <span lang="en">LAB</span></h2>
-              <p class="works__paragraph">Маркетинг</p>
+              <div class="works__description">
+                <h2 class="works__title">Проєкт <span lang="en">LAB</span></h2>
+                <p class="works__paragraph">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="works__list-item">
@@ -135,8 +148,10 @@
                 alt="Ноутбук за яким працює людина"
                 width="370"
               />
-              <h2 class="works__title" lang="en">Growing Business</h2>
-              <p class="works__paragraph">Додаток</p>
+              <div class="works__description">
+                <h2 class="works__title" lang="en">Growing Business</h2>
+                <p class="works__paragraph">Додаток</p>
+              </div>
             </a>
           </li>
         </ul>
