--- a/index.html
+++ b/index.html
@@ -52,54 +52,58 @@
           <button class="hero__button" type="button">Замовити послугу</button>
         </div>
       </section>
-      <section class="about-us section">
+      <section class="advantages section">
         <div class="container">
-          <h2 class="about-us__advantages visually-hidden">Переваги</h2>
-          <ul class="about-us__advantages-list">
-            <li class="about-us__advantages-item">
-              <h3 class="about-us__advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="about-us__advantages-paragraph">
+          <h2 class="visually-hidden">Переваги</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <h3 class="advantages__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="advantages__paragraph">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="about-us__advantages-item">
-              <h3 class="about-us__advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="about-us__advantages-paragraph">
+            <li class="advantages__item">
+              <h3 class="advantages__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="advantages__paragraph">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="about-us__advantages-item">
-              <h3 class="about-us__advantages-title">ПЛАНУВАННЯ</h3>
-              <p class="about-us__advantages-paragraph">
+            <li class="advantages__item">
+              <h3 class="advantages__title">ПЛАНУВАННЯ</h3>
+              <p class="advantages__paragraph">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="about-us__advantages-item">
-              <h3 class="about-us__advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="about-us__advantages-paragraph">
+            <li class="advantages__item">
+              <h3 class="advantages__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="advantages__paragraph">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
-          <h2 class="about-us__services-title">Чим ми займаємося</h2>
-          <ul class="about-us__services-list">
-            <li class="about-us__services-images-item">
-              <a class="link" href=""
-                ><img src="./images/desktop.jpg" alt="Десктопні програми" width="370"
-              /></a>
-            </li>
-            <li class="about-us__services-images-item">
-              <a class="link" href=""
-                ><img src="./images/smartphone.jpg" alt="Додатки для смартфонів" width="370"
-              /></a>
-            </li>
-            <li class="about-us__services-images-item">
-              <a class="link" href=""
-                ><img src="./images/tablet.jpg" alt="Програми для планшетів" width="370"
-              /></a>
-            </li>
-          </ul>
         </div>
+      </section>
+        <section class="about-us section">
+          <div class="container">
+              <h2 class="about-us__services-title">Чим ми займаємося</h2>
+              <ul class="about-us__services-list">
+              <li class="about-us__services-images-item">
+                <a class="link" href=""
+                  ><img src="./images/desktop.jpg" alt="Десктопні програми" width="370"
+                /></a>
+              </li>
+              <li class="about-us__services-images-item">
+                <a class="link" href=""
+                  ><img src="./images/smartphone.jpg" alt="Додатки для смартфонів" width="370"
+                /></a>
+              </li>
+              <li class="about-us__services-images-item">
+                <a class="link" href=""
+                  ><img src="./images/tablet.jpg" alt="Програми для планшетів" width="370"
+                /></a>
+              </li>
+            </ul>
+          </div>
       </section>
       <section class="our-team section">
         <div class="container">
@@ -127,6 +131,9 @@
             </li>
           </ul>
         </div>
+            </div>
+          </section>
+          
       </section>
     </main>
     <footer class="footer">
