--- a/portfolio.html
+++ b/portfolio.html
@@ -47,114 +47,116 @@
     </header>
     <main>
       <section class="works section">
-        <h1 class="works__title visually-hidden">Портфоліо</h1>
-        <ul class="works__filter">
-          <li><button class="works__filter-button" type="button">Усі</button></li>
-          <li><button class="works__filter-button" type="button">Веб-сайти</button></li>
-          <li><button class="works__filter-button" type="button">Додатки</button></li>
-          <li><button class="works__filter-button" type="button">Дизайн</button></li>
-          <li><button class="works__filter-button" type="button">Маркетинг</button></li>
-        </ul>
-        <ul class="works__list">
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img class="works__img" src="./images/techno.jpg" alt="Ноутбук" width="370" />
-              <div class="works__description">
-                <h2 class="works__title">Технокряк</h2>
-                <p class="works__paragraph">Веб-сайт</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img
-                class="works__img"
-                src="./images/poster.jpg"
-                alt="Постер з двома футболістами"
-                width="370"
-              />
-              <div class="works__description">
-                <h2 class="works__title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="works__paragraph">Дизайн</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img
-                class="works__img"
-                src="./images/restaurant.jpg"
-                alt="Логотип ресторана морської їжі"
-                width="370"
-              />
-              <div class="works__description">
-                <h2 class="works__title">Ресторан <span lang="en">Seafood</span></h2>
-                <p class="works__paragraph">Додаток</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img class="works__img" src="./images/prime.jpg" alt="Гарнітура" width="370" />
-              <div class="works__description">
-                <h2 class="works__title">Проєкт <span lang="en">Prime</span></h2>
-                <p class="works__paragraph">Маркетинг</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img class="works__img" src="./images/boxes.jpg" alt="Дві коробочки" width="370" />
-              <div class="works__description">
-                <h2 class="works__title">Проєкт <span lang="en">Boxes</span></h2>
-                <p class="works__paragraph">Додаток</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img class="works__img" src="./images/monoblock.jpg" alt="Моноблок" width="370" />
-              <div class="works__description">
-                <h2 class="works__title" lang="en">Inspiration has no Borders</h2>
-                <p class="works__paragraph">Веб-сайт</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img class="works__img" src="./images/book.jpg" alt="Відкрита книга" width="370" />
-              <div class="works__description">
-                <h2 class="works__title">Видання <span lang="en">Limited Edition</span></h2>
-                <p class="works__paragraph">Дизайн</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img class="works__img" src="./images/label.jpg" alt="Бирка" width="370" />
-              <div class="works__description">
-                <h2 class="works__title">Проєкт <span lang="en">LAB</span></h2>
-                <p class="works__paragraph">Маркетинг</p>
-              </div>
-            </a>
-          </li>
-          <li class="works__list-item">
-            <a class="works__example link" href="">
-              <img
-                class="works__img"
-                src="./images/notebook.jpg"
-                alt="Ноутбук за яким працює людина"
-                width="370"
-              />
-              <div class="works__description">
-                <h2 class="works__title" lang="en">Growing Business</h2>
-                <p class="works__paragraph">Додаток</p>
-              </div>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="works__title visually-hidden">Портфоліо</h1>
+          <ul class="works__filter">
+            <li><button class="works__filter-button" type="button">Усі</button></li>
+            <li><button class="works__filter-button" type="button">Веб-сайти</button></li>
+            <li><button class="works__filter-button" type="button">Додатки</button></li>
+            <li><button class="works__filter-button" type="button">Дизайн</button></li>
+            <li><button class="works__filter-button" type="button">Маркетинг</button></li>
+          </ul>
+          <ul class="works__list">
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img class="works__img" src="./images/techno.jpg" alt="Ноутбук" width="370" />
+                <div class="works__description">
+                  <h2 class="works__title">Технокряк</h2>
+                  <p class="works__paragraph">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img
+                  class="works__img"
+                  src="./images/poster.jpg"
+                  alt="Постер з двома футболістами"
+                  width="370"
+                />
+                <div class="works__description">
+                  <h2 class="works__title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="works__paragraph">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img
+                  class="works__img"
+                  src="./images/restaurant.jpg"
+                  alt="Логотип ресторана морської їжі"
+                  width="370"
+                />
+                <div class="works__description">
+                  <h2 class="works__title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="works__paragraph">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img class="works__img" src="./images/prime.jpg" alt="Гарнітура" width="370" />
+                <div class="works__description">
+                  <h2 class="works__title">Проєкт <span lang="en">Prime</span></h2>
+                  <p class="works__paragraph">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img class="works__img" src="./images/boxes.jpg" alt="Дві коробочки" width="370" />
+                <div class="works__description">
+                  <h2 class="works__title">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="works__paragraph">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img class="works__img" src="./images/monoblock.jpg" alt="Моноблок" width="370" />
+                <div class="works__description">
+                  <h2 class="works__title" lang="en">Inspiration has no Borders</h2>
+                  <p class="works__paragraph">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img class="works__img" src="./images/book.jpg" alt="Відкрита книга" width="370" />
+                <div class="works__description">
+                  <h2 class="works__title">Видання <span lang="en">Limited Edition</span></h2>
+                  <p class="works__paragraph">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img class="works__img" src="./images/label.jpg" alt="Бирка" width="370" />
+                <div class="works__description">
+                  <h2 class="works__title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="works__paragraph">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="works__list-item">
+              <a class="works__example link" href="">
+                <img
+                  class="works__img"
+                  src="./images/notebook.jpg"
+                  alt="Ноутбук за яким працює людина"
+                  width="370"
+                />
+                <div class="works__description">
+                  <h2 class="works__title" lang="en">Growing Business</h2>
+                  <p class="works__paragraph">Додаток</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
