--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
         <address>
           <ul class="footer__contacts">
             <li class="footer__contacts-adress"><p>м. Київ, пр-т Лесі Українки, 26</p></li>
-            <li>
-              <a class="footer__contacts-item link" href="mailto:info@devstudio.com"
+            <li class="footer__contacts-item">
+              <a class="footer__link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a class="footer__contacts-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="footer__contacts-item">
+              <a class="footer__link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
